--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,9 @@ body{
 .container{
     display: flex;
     align-items: end;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding-left: 6%;
 }
 
 .logo{
@@ -36,6 +37,13 @@ button{
 .info > img{
     width: 20em;
     margin-left: 10px;
+}
+
+
+.Title_kimyeojoo{
+    width: 42.2%;
+    float: right;
+    
 }
 
 @media screen and (max-width: 720px){
