--- a/css/intro.css
+++ b/css/intro.css
@@ -4,17 +4,18 @@
 }
 
 html, body{
-    height: 100%;
+    height: 100%;    
+
 }
 
 img{
     width: 100%;
     height: 100%;
-    position: relative;
+
 }
 
-.bi-caret-right-fill{
-    color: aqua;
-    width: 30px;
-    position: absolute;
+.icon{
+    color: black;
+    position: fixed;
+    width: 100px;
 }
