profile_Doyoon.png 이름 변경

--- a/css/profile_Doyoon.css
+++ b/css/profile_Doyoon.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../images/profile_DoYoon.png);
+    background-image: url(../images/profile_Doyoon.png);
     background-size: cover;
 }
 
