--- a/css/story.css
+++ b/css/story.css
@@ -11,19 +11,23 @@ body{
     align-items: center;
     justify-content: center;
     background-color: pink;
+    font-size: 1.5rem;
     width: 90vw;
     height: 15em;
-    opacity: 0.5;
-    margin: auto 4%;
+    margin: auto 5%;
     position: relative;
     z-index: 2;
 }
 
 .nameWindow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
     background-color: aliceblue;
-    margin: auto 4%;
-    width: 180px;
-    height: 4em;
+    margin: auto 5%;
+    width: 200px;
+    height: 3em;
     position: relative;
     z-index: 3;
 }
