--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ body{
 
 .container{
     display: flex;
-    align-items: end;
     justify-content: space-between;
     align-items: center;
     padding-left: 6%;
@@ -48,8 +47,22 @@ button{
 
 @media screen and (max-width: 720px){
 
+    body{
+        align-items: center;
+    }
+
     .logo{
         width: 30em;
+    }
+
+    .Title_kimyeojoo,
+    .HeartIcon{
+        display: none;
+    }
+
+    .button{
+        flex-wrap: wrap;
+        align-items: center;
     }
 
 }
