--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,11 @@ body{
 }
 
 .container{
+    /* width: 100%; */
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     padding-left: 6%;
 }
 
@@ -28,8 +30,6 @@ button{
     border: 0;
 }
 
-
-
 .start > img{
     width: 20em;
 }
@@ -38,11 +38,13 @@ button{
     margin-left: 10px;
 }
 
+.HeartIcon{
+    width: 10em;
+}
 
 .Title_kimyeojoo{
-    width: 40%;
+    width: 30em;
     float: right;
-    
 }
 
 @media screen and (max-width: 720px){
