--- a/css/question.css
+++ b/css/question.css
@@ -38,7 +38,7 @@ body{
     z-index: 3;
 }
 
-input[type="checkbox"] {
+input[type="radio"] {
     cursor: url(../images/feather.png), auto;
     position: relative;
     /* top: 2em; */
