--- a/css/question.css
+++ b/css/question.css
@@ -43,3 +43,14 @@ body{
     float: right;
 }
 
+
+.imgMindeulre{
+    align-items: center;
+    width: 20em;
+    height: auto;
+    display: block; 
+    margin: 0px auto;
+    position: relative;
+    z-index: 1;
+}
+
