--- a/css/phoneNumber.css
+++ b/css/phoneNumber.css
@@ -1,3 +1,16 @@
 .homeBtn {
     float: right;
 }
+
+.container{
+    background-color: gray;
+}
+
+
+button{
+    font-size: 1.2rem;
+}
+
+.name{
+    margin: 8px 5px;
+}
