최재율 프로필 사진 추가

--- a/css/phoneNumber.css
+++ b/css/phoneNumber.css
@@ -1,9 +1,9 @@
-.homeBtn {
+.homeBtn{
     float: right;
 }
 
 .container{
-    background-color: gray;
+    background-color: rgb(236, 237, 255);
 }
 
 
