--- a/css/story.css
+++ b/css/story.css
@@ -36,7 +36,9 @@ body{
 
 .button {
     width: 100%;
-    align-items: baseline;
+    align-items: flex-end;
+    margin-right: 5%;
+    position: relative;
 }
 
 .button > button {
