--- a/css/story.css
+++ b/css/story.css
@@ -7,9 +7,9 @@ body{
     bottom: 0;
 }
 .character{
-    max-height: 350px;
+    max-height: 40vw;
     overflow: hidden;
-    margin-bottom: -80px;
+    margin-bottom: -200px;
     position: relative;
     z-index: 1;
 }
