프로필 변경

--- a/css/profile.css
+++ b/css/profile.css
@@ -24,7 +24,7 @@ button{
     width: 12em;
     height: 14em;
     margin-top: 0.8em;
-    margin-left: -72%;
+    margin-left: -5.6em;
     padding: 3% 3% 3% 3%;
     display: flex;
     justify-content: center;
