--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,22 @@
-.container{
-    
+body{
+    background-color: rgb(182, 158, 197);
+}
+
+.container {
+    position: relative;
+}
+
+.image-container {
+    width: 100%;
+    height: 400px; /* 이미지 높이를 원하는 크기로 조정 */
+    overflow: hidden;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 이미지를 컨테이너에 맞게 조정 */
+    object-position: center; /* 이미지 중앙 정렬 */
 }
 
 button{
@@ -9,9 +26,21 @@ button{
 .prevButton, 
 .nextButton{
     font-size: 2rem;
+    margin: 0 0.6em;
+
+}
+
+.nextButton{
+    float: right;
 }
 
 .homeBtn{
     float: right;
     margin-top: 0.6em;
+}
+
+.image-description{
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
 }
