스토리1 수정

--- a/css/story.css
+++ b/css/story.css
@@ -46,8 +46,8 @@
 }
 
 .selectContainer{
-    margin-left: 92%;
-    margin-bottom: -35%;
+    /* margin-left: 92%;
+    margin-bottom: -35%; */
 }
 
 .button {
