--- a/css/phoneNumber.css
+++ b/css/phoneNumber.css
@@ -1,10 +1,14 @@
+body{
+    background-color: rgb(255, 209, 244);
+}
+
 .homeBtn{
     float: right;
     margin-top: 0.6em;
 }
 
 .container{
-    background-color: rgb(236, 237, 255);
+    background-color: rgb(255, 245, 253);
 }
 
 
