--- a/css/story.css
+++ b/css/story.css
@@ -42,16 +42,17 @@ img{
     justify-content: center;
     font-size: 1.5rem;
     background-color: aliceblue;
-    width: 200px;
-    height: 1.7em;
+    width: 300px;
+    height: 2em;
     position: relative;
     margin-top: 0.8em;
     z-index: 3;
 }
 
 .selectContainer{
-    /* margin-left: 92%;
-    margin-bottom: -35%; */
+    display: flex;
+    margin-top: 5vh;
+    gap: 10vh;
 }
 
 .button {
