--- a/css/story.css
+++ b/css/story.css
@@ -121,4 +121,24 @@ img{
         z-index: 1;
     
     }
+
+    .select1, .select2{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
+        background-color: aliceblue;
+        width: 200px;
+        height: 2em;
+        position: relative;
+        margin-top: 0;
+        z-index: 3;
+    }   
+
+    .button {
+        width: 100%;
+        align-items: flex-end;
+        margin-right: 5%;
+        position: relative;
+    }
 }
