--- a/css/all.css
+++ b/css/all.css
@@ -28,3 +28,7 @@ input[type="radio"]{
     cursor: url(../images/feather2.png), auto;
     position: relative;
 }
+
+@media screen and (max-width: 720px) {
+    
+}
