--- a/css/story.css
+++ b/css/story.css
@@ -1,6 +1,8 @@
 body{
+    background-size: cover; 
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 img{
