--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,13 @@ body{
 }
 
 .titleContainer{
-    margin-left: 7vw;
+    height: 100%;
+    display:flex;
+    display:inline;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10vw;
+    text-align: center;
 }
 
 
@@ -30,8 +36,8 @@ body{
 }
 
 .logo{
-    width: 43vw;
-    margin-top: 5%;
+    width: 35em;
+    margin-top: 15%;
 }
 
 button{
@@ -52,13 +58,16 @@ button{
 }
 
 .Title_kimyeojoo{
-    width: 42%;
+    width: 40vw;
     float: right;
 }
 
 @media screen and (max-width: 720px){
 
     body{
+        height: 100%;
+        display: flex;
+        justify-content: center;
         align-items: center;
     }
 
@@ -74,6 +83,10 @@ button{
     .button{
         flex-wrap: wrap;
         align-items: center;
+    }
+
+    .titleContainer{
+        margin-left: 0;
     }
 
 }
