--- a/css/question.css
+++ b/css/question.css
@@ -5,7 +5,6 @@ body{
 }
 
 .container{
-    /* display: flex; */
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -38,6 +37,7 @@ body{
     margin: auto 5%;
     position: relative;
     z-index: 2;
+    word-break:keep-all; 
 }
 
 .nameWindow{
@@ -69,3 +69,15 @@ body{
     z-index: 1;
 }
 
+@media screen and (max-width: 720px){
+
+    .dialogueWindow{
+        font-size: 1.3rem;
+        word-break:keep-all;
+    }
+
+    .nameWindow{
+        /* margin: 0; */
+    }
+
+}
