반응형 변경

--- a/css/story.css
+++ b/css/story.css
@@ -93,6 +93,26 @@ img{
     z-index: 5;
 }
 
+@media screen and (max-width: 1500px) {
+    .imgCharacter{
+        width: 35vw;
+    }
+
+    .character{
+        margin-bottom: -150px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .imgCharacter{
+        width: 43vw;
+    }
+
+    .character{
+        margin-bottom: -80px;
+    }
+}
+
 @media screen and (max-width: 720px) {
     .dialogueWindow{
         font-size: 1.3rem;
@@ -111,7 +131,7 @@ img{
     }
 
     .character{
-        max-height: 70vw;
+        max-height: 90vw;
         overflow: hidden;
         margin-bottom: -120px;
         position: relative;
@@ -141,4 +161,17 @@ img{
     #nextButton{
         width: 100px;
     }
+}
+
+
+@media screen and (max-width: 540px){
+    .imgCharacter{
+        width: 90vw;
+        padding-left: 10vw;
+    }
+
+    .character{
+        max-height: 120vw;
+    }
+
 }
