--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,8 @@ button{
     .Title_kimyeojoo{
         display: none;
     }
+
+    
 }
 
 @media screen and (max-width: 1000px){
@@ -105,6 +107,10 @@ button{
     button{
         flex-wrap: wrap;
         align-items: center;
+    }
+
+    .titleContainer{
+        margin-left: 0;
     }
 
 }
